# observatory

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  PLAN.md  Procfile.dev  README.md  agentic-ci-observatory.md  alembic.ini  compose.yaml  org-pulse-config.json  pyproject.toml
data/: seed.json  semantic-claim-consolidation-synthetic-evaluation.json  semantic-claim-consolidation-synthetic-reuse-report.json  semantic-claim-equivalence-v1.json
docs/: chat-deployment.md  claim-assurance-migration.md  data-sources-api.md  run-manifest-schema.md  runbook.md  user-guide.md
docs/decisions/: ADR-0001-source-under-src.md  ADR-0002-scoped-api-keys.md  ADR-0003-key-entropy-256-bits.md  ADR-0004-sha256-over-bcrypt.md  ADR-0005-no-key-checksum.md  ADR-0006-platform-credential-management.md  ADR-0007-collector-log-viewer.md  ADR-0008-org-pulse-config-import.md  ADR-0009-honcho-for-local-dev.md  ADR-0010-tailwind-sidebar-dark-mode.md  ADR-0011-raw-artifact-collection.md  ADR-0012-pipeline-definition-collection.md  ADR-0013-ci-definition-ingestion.md  ADR-0014-global-artifacts-viewer.md  ADR-0015-telemetry-tier1-run-metrics.md  ADR-0016-telemetry-tier2-otel-ingestion.md  ADR-0017-model-telemetry.md  ADR-0018-hallucination-detection.md  ADR-0019-full-otel-event-ingestion.md  ADR-0020-gitlab-job-trace-collection.md  (+7 more)
k8s/base/: pvc.yaml  (+6 more)
scripts/: audit-claim-consolidation.py  check-claim-consolidation-gates.py  collect-artifacts.py  extract-claims.py  ingest-claims.py  ingest-definitions.py  ingest-telemetry.py  ingest-traces.py  parse-job-traces.py  verify-claims.py
(+284 files in other folders)
